fix responsivnes in form, fix double accordion, add index to duplicate columns, change color threshold, fix header z-index

--- a/src/renderer/src/common/components/header/header.scss
+++ b/src/renderer/src/common/components/header/header.scss
@@ -1,6 +1,7 @@
 .header {
 	justify-content: flex-start;
   background-color: rgba(14, 46, 68, 0.78);
+	z-index: 1;
   -webkit-app-region: drag;
 
 
